--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Deploy to EC2
       env:
         EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_HOST: ${{ secrets.EC2__HOST }}
+        EC2_HOST: ${{ secrets.EC2_HOST }}
       run: |
         ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
        
