--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
+      - django-branch  # Trigger on push to the main branch
 
 jobs:
   deploy:
