--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -67,17 +67,17 @@ jobs:
         nohup python manage.py runserver 0.0.0.0:8000 > server.log 2>&1 &
 
         # Configure NGINX to serve Django on port 80
-        sudo bash -c 'cat > /etc/nginx/conf.d/django.conf << "NGINXCONF"
-        server {
-            listen 80;
-            server_name _;
-            location / {
-                proxy_pass http://127.0.0.1:8000;
-                proxy_set_header Host \$host;
-                proxy_set_header X-Real-IP \$remote_addr;
-                proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-            }
-        }
-        NGINXCONF'
-        sudo systemctl restart nginx
+        # sudo bash -c 'cat > /etc/nginx/conf.d/django.conf << "NGINXCONF"
+        # server {
+        #     listen 80;
+        #     server_name _;
+        #     location / {
+        #         proxy_pass http://127.0.0.1:8000;
+        #         proxy_set_header Host \$host;
+        #         proxy_set_header X-Real-IP \$remote_addr;
+        #         proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        #     }
+        # }
+        # NGINXCONF'
+        # sudo systemctl restart nginx
         EOF
